--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-python-dotenv>=1.0.0
-requests>=2.0.0
-playsound>=1.3.0
-psutil>=5.9.0
-pytest>=7.0.0
-pytest>=7.0.0
+python-dotenv
+requests
+playsound==1.2.2
+psutil
+pytest
