--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "Aegis voice + cognition system",
   "main": "index.js",
   "scripts": {
-    "fix:env-guards": "node tools/fix_all_env_guard_paths.mjs",
-    "audit:env-guards": "bash -lc \"grep -RIn --exclude-dir=node_modules --exclude-dir=.git --exclude-dir=logs --exclude-dir='core/cognition/learning/voice/raw_scripts' -P 'from\\s+[\\\"\\'](?!\\./env_guard\\.mjs|(?:\\.\\./)+voice/utils/env_guard\\.mjs)[\\\"\\'][^\\\"\\']*env_guard\\.mjs' . || true\"",
     "start": "node core.mjs",
-    "fix_env_guard_paths": "node tools/fix_env_paths.mjs",
-    "verify:imports": "node tools/verify-imports.mjs",
+    "fix:env-guards": "node tools/fix_all_env_guard_paths.mjs",
+    "audit:env-guards": "rg -n --no-ignore -g '!node_modules' -g '!.git' -g '!logs' -g '!core/cognition/learning/voice/raw_scripts' -g '!tools/fix_*env_guard*_paths.mjs' -g '!*_env.mjs.bak.*' \"(from|import\\()\\s*['\\\"][^'\\\"]*env_guard\\.mjs\" | rg -v \"\\./env_guard\\.mjs|voice/utils/env_guard\\.mjs\" || true",
+    "fix_env_guard_paths": "node tools/fix_env_guard_paths.mjs",
+    "verify-imports": "node tools/verify-imports.mjs",
     "build": "echo \"Build step not required (ESM)\" && exit 0",
-    "diagnostics": "node tools/repo_status.sh || true",
+    "diagnostics": "node tools/repo_status.mjs || true",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:ollama": "node scripts/test/test_ollama.mjs",
-    "doctor": "bash scripts/diagnostics/run_doctor.sh",
+    "doctor1": "bash scripts/diagnostics/run_doctor.sh",
     "doctor:quiet": "NODE_NO_WARNINGS=1 QUIET=1 scripts/diagnostics/run_doctor.sh",
-    "doctor:ci": "QUIET=1 FAIL_FAST=1 bash scripts/diagnostics/run_doctor.sh",
+    "doctor:all": "scripts/diagnostics/run_doctor.sh",
     "full:pipeline": "bash scripts/diagnostics/full_voice_pipeline_check.sh && bash scripts/diagnostics/rotate_logs.sh logs/voice/full_pipeline 10",
     "checkpoint": "bash scripts/diagnostics/run_checkpoint.sh",
     "checkpoint:push": "PUSH_TAG=1 bash scripts/diagnostics/run_checkpoint.sh",
@@ -25,14 +25,13 @@
     "clean:all": "npm run clean:smoke && npm run clean:batch",
     "validate-and-checkpoint": "npm run full:pipeline && npm run checkpoint",
     "syscheck": "node scripts/diagnostics/run_system_check.mjs",
-    "syscheck:ci": "QUIET=1 FAIL_FAST=1 node scripts/diagnostics/run_system_check.mjs",
+    "syscheck:CI": "QUIET=1 FAIL_FAST=1 node scripts/diagnostics/run_system_check.mjs",
     "baseline": "bash scripts/diagnostics/make_baseline.sh",
     "patch:env-guard-calls": "bash scripts/patches/upgrade_env_guard_calls.sh",
     "patch:env-guard-calls:dry": "DRY=1 bash scripts/patches/upgrade_env_guard_calls.sh",
     "tree": "node scripts/diagnostics/print_repo_tree.mjs",
     "tree:deep": "node scripts/diagnostics/print_repo_tree.mjs --depth=12",
-    "tree:png": "node scripts/diagnostics/print_repo_tree.mjs --png=true",
-    "fix:envguard": "node tools/fix_env_guard_paths.mjs"
+    "tree:png": "node scripts/diagnostics/print_repo_tree.mjs --png=true"
   },
   "keywords": [],
   "author": "",
@@ -45,6 +44,7 @@
   "devDependencies": {
     "dependency-cruiser": "^16.10.4",
     "graphviz": "^0.0.9",
+    "husky": "^9.1.7",
     "jscodeshift": "^17.3.0"
   },
   "type": "module"
