rev-7: scaffold locked (health + invariants green)

--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ OLLAMA_MODEL=llama2:latest
 OLLAMA_HOST=http://127.0.0.1:11434
 
 # ----- ElevenLabs (voice TTS) -----
-ELEVENLABS_API_KEY=sk_0047b5ea245db0f0e7dfd0b6647df5dd0803c186efd00af0
+ELEVENLABS_API_KEY=sk_82cf18438a292e355bed78aa0391f03a317e4391ba678c20
 ELEVENLABS_VOICE_ID=FG350wLfM2HDwTst4Q7I
 ENABLE_ELEVENLABS_TTS=true
 
@@ -25,4 +25,7 @@ ENABLE_ELEVENLABS_TTS=true
 ENABLE_LOCAL_TTS=false
 
 # ----- Output path for generated speech -----
+VOICE_MODE=elevenlabs
 VOICE_OUTPUT_PATH=voice/elevenlabs_output.mp3
+
+
